  * DEPENDPATH does not end up in VPATH any more. Some SOURCES may not be found any more.
  * Several functions and built-in variables were modified to return normalized paths.
  * The -(no-)exception flags in configure have been removed. Qt modules are now compiled
    without exceptions by default, as they do not use them and can neither handle them
    properly. Qt Core still has exceptions enabled to correctly throw bad_alloc exceptions
    in our tool classes.
    Whether code should be compiled with exception support enabled or disabled can be
    controlled by a CONFIG += exceptions/exceptions_off setting in the .pro file.
  * The -no/-stl configure options are gone. Qt always uses the STL now.
  * The -prefix-install configure option is gone. Use -prefix, etc. instead.
  * The -make option of the Windows configure was renamed to -make-tool.
    -make now complements -no-make, like in the Unix version.
  * The object_with_source CONFIG flag was removed. Use object_parallel_to_source instead.
  * Support for universal binaries on Mac OS has been removed.
  * The processor architecture handling changed significantly. This affects the -arch & -*-endian
    configure options, the QT_ARCH qmake variable, and more.
  * No "make_default" make targets will be generated any more. Use "make_first" instead.
  * The "qmake" make targets are non-recursive now. Use "qmake_all" to recurse.
  * load() with paths relative to the current project is not supported any more.
    Use include() instead.
  * Persistent qmake properties are not versioned any more. Also, the vendor changed to
    "QtProject", so old settings are lost.
  * Support for the Borland toolchain was removed. Numerous obsolete makespecs were culled.
  * setcepaths.bat is gone. QMake-generated Makefiles are self-contained now.
  * moc_dir, rcc_dir and some other tool variables are not defined in Qt's .pc files any more;
    the generic host_bins is defined instead.
