@@ -85,7 +85,6 @@ public:
     void generateSystemVars();
 #endif
     void showSummary();
-    void findProjects( const QString& dirName );
     QString firstLicensePath();
 
 #if !defined(EVAL)
